# cpp

./: .clang-format  .clang-tidy  .gitignore
deadpool/: CMakeLists.txt  external_api.h  main.cpp  stopper.cpp  stopper.h  task.txt
deadpool/src/: external_api.cpp  external_api.h  function_traits.hpp  main.cpp  process_request_func.cpp  process_request_func.h  request_processor.cpp  request_processor.h
deadpool/tests/: tests.cpp
